--- a/src/web_page/pageuser.html
+++ b/src/web_page/pageuser.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title >主页</title>
+    <title >用户管理</title>
 </head>
 <body>
-    欢迎来到我的主页
+    欢迎来到用户管理页面
     
 </body>
 </html>
